https://repo.munts.com is now live.
Changed hyperlinks to http://git.munts.com/... to point to
https://repo.munts.com instead.



git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22996 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/examples/README.html
+++ b/examples/README.html
@@ -1,11 +1,11 @@
 <h1>Embedded Linux Example Programs</h1>
 <p>Here are some example programs for embedded Linux systems. They are
 primarily written for the cross-compiled <a href=
-"http://git.munts.com/muntsos">MuntsOS Embedded Linux Framework</a>, but
+"https://github.com/pmunts/muntsos">MuntsOS Embedded Linux Framework</a>, but
 they can also be built with native compilers for conventional Linux
 distributions such as Debian.</p>
 <p>Most of these example programs depend on <a href=
-"http://git.munts.com/libsimpleio"><b>libsimpleio</b></a>, the Linux Simple I/O
+"https://github.com/pmunts/libsimpleio"><b>libsimpleio</b></a>, the Linux Simple I/O
 Library.</p>
 <hr>
 Questions or comments to Philip Munts <a href=
