www.linux-usb.org is only insecure
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22998 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -377,7 +377,7 @@ systems.</p>
 trees.</p>
 <h5>USB Gadgets</h5>
 <p><b>MuntsOS</b> also offers a second, different Raspberry Pi 3 kernel with
-USB host support disabled and <a href="https://www.linux-usb.org/gadget">USB
+USB host support disabled and <a href="http://www.linux-usb.org/gadget">USB
 Gadget</a> peripheral support enabled. This kernel only runs on 3 A+, Zero 2 W,
 and certain CM3 carrier boards which lack the USB hub present on Raspberry Pi 3
 Model B and B+ boards. The single USB controller that is part of the BCM2710
