--- a/README.html
+++ b/README.html
@@ -174,6 +174,17 @@ the Raspberry Pi CM5 on a CM5IO. This has proven to be a very nice setup.</p>
 "https://repo.munts.com/muntsos/doc/AppNote19-BeaglePlay.pdf">Application Note
 #19</a> for important information.</p>
 </li>
+<li>
+<p>18 March 2025 -- Enabled encryption for <b>repo.munts.com</b> (<a href=
+"https://github.com/pmunts/muntsos/issues/2">GitHub issue #2</a>) which is now
+accessible either without encryption at <a href=
+"http://repo.munts.com">http://repo.munts.com</a> or with encryption at
+<a href="https://repo.munts.com">https://repo.munts.com</a>. Document and
+script hyperlinks that formerly referenced <b>git.munts.com</b> now reference
+<a href="https://repo.munts.com/muntsos">https://repo.munts.com/muntsos</a> and
+<b><tt>sysconfig</tt></b> has switched from <b><tt>wget</tt></b> to
+<b><tt>curl</tt></b>.</p>
+</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the <b>MuntsOS</b> cross-toolchain development
