Overhauled email sending.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23060 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -185,6 +185,14 @@ script hyperlinks that formerly referenced <b>git.munts.com</b> now reference
 <b><tt>sysconfig</tt></b> has switched from <b><tt>wget</tt></b> to
 <b><tt>curl</tt></b>.</p>
 </li>
+<li>
+<p>22 March 2025 -- Overhauled <b>MuntsOS</b> email support: Rewrote <a href=
+"https://repo.munts.com/muntsos/doc/AppNote16-Sending-Email.pdf">Application
+Note #16</a>, upgraded the <b><tt>dma</tt></b> and <b><tt>emailrelay</tt></b>
+extension packages to latest releases, and updated their configuration files
+for authenticated SMTP relay. Added <b><tt>mailtunnel</tt></b>, an extension
+package template.</p>
+</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the <b>MuntsOS</b> cross-toolchain development
