--- a/README.html
+++ b/README.html
@@ -201,6 +201,21 @@ libmysqlclient to 3.4.4, gdbm to 1.25, paho.mqtt.c to 1.3.14, libffi to 3.4.7,
 util-linux to 2.41, and xz to 5.8.0. Toolchain Debian package gcc-*-libs has
 subsumed gcc-*-libaws.</p>
 </li>
+<li>
+<p>19 May 2025 -- Added extension packages <b><tt>libwioe5p2p</tt></b>,
+<b><tt>libwioe5ham1</tt></b>, <b><tt>libwioe5ham2</tt></b>, and
+<b><tt>wioe5_ham1_rabbitmq</tt></b>. Added Ada extension programs
+<b><tt>wioe5_ham1_mailer</tt></b>, <b><tt>wioe5_ham1_responder</tt></b>,
+<b><tt>wioe5_ham2_mailer</tt></b>, and <b><tt>wioe5_ham2_responder</tt></b>.
+These all result from a deep dive study about using the <a href=
+"https://wiki.seeedstudio.com/LoRa-E5_STM32WLE5JC_Module">Wio-E5 LoRa
+Transceiver Module</a> for Amateur Radio operation in the <a href=
+"https://en.wikipedia.org/wiki/33-centimeter_band">33-cm band</a>. See <a href=
+"https://repo.munts.com/libsimpleio/doc/WioE5LoRaP2P.pdf">WioE5LoRaP2P.pdf</a>
+for more background information. Also fixed a bug in <b><tt>sysconfig</tt></b>
+that installed <b><tt>.nupkg</tt></b> extension package files to
+<b><tt>/boot/autoexec.d</tt></b> instead of <b><tt>/boot/packages</tt></b>.</p>
+</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the <b>MuntsOS</b> cross-toolchain development
