--- a/README.html
+++ b/README.html
@@ -205,8 +205,7 @@ subsumed gcc-*-libaws.</p>
 <p>19 May 2025 -- Added extension packages <b><tt>libwioe5p2p</tt></b>,
 <b><tt>libwioe5ham1</tt></b>, <b><tt>libwioe5ham2</tt></b>, and
 <b><tt>wioe5_ham1_rabbitmq</tt></b>. Added Ada extension programs
-<b><tt>wioe5_ham1_mailer</tt></b>, <b><tt>wioe5_ham1_responder</tt></b>,
-<b><tt>wioe5_ham2_mailer</tt></b>, and <b><tt>wioe5_ham2_responder</tt></b>.
+<b><tt>wioe5_ham1_mailer</tt></b> and <b><tt>wioe5_ham1_responder</tt></b>.
 These all result from a deep dive study about using the <a href=
 "https://wiki.seeedstudio.com/LoRa-E5_STM32WLE5JC_Module">Wio-E5 LoRa
 Transceiver Module</a> for Amateur Radio operation in the <a href=
