--- a/README.html
+++ b/README.html
@@ -203,10 +203,11 @@ subsumed gcc-*-libaws.</p>
 </li>
 <li>
 <p>19 May 2025 -- Added extension packages <b><tt>libwioe5p2p</tt></b>,
-<b><tt>libwioe5ham1</tt></b>, <b><tt>libwioe5ham2</tt></b>, and
-<b><tt>wioe5_ham1_rabbitmq</tt></b>. Added Ada extension programs
-<b><tt>wioe5_ham1_mailer</tt></b> and <b><tt>wioe5_ham1_responder</tt></b>.
-These all result from a deep dive study about using the <a href=
+<b><tt>libwioe5ham1</tt></b>, <b><tt>libwioe5ham2</tt></b>,
+<b><tt>wioe5_ham1_mysql</tt></b>, and <b><tt>wioe5_ham1_rabbitmq</tt></b>.
+Added Ada extension programs <b><tt>wioe5_ham1_mailer</tt></b> and
+<b><tt>wioe5_ham1_responder</tt></b>. These all result from a deep dive study
+about using the <a href=
 "https://wiki.seeedstudio.com/LoRa-E5_STM32WLE5JC_Module">Wio-E5 LoRa
 Transceiver Module</a> for Amateur Radio operation in the <a href=
 "https://en.wikipedia.org/wiki/33-centimeter_band">33-cm band</a>. See <a href=
