--- a/README.html
+++ b/README.html
@@ -113,6 +113,8 @@ and xz to 5.8.1. Upgraded userland programs openssh to 10.0p1, ethtool to 6.15,
 mailutils to 3.19, and nano editor to 8.5. Upgraded the BeaglePlay kernel to
 6.6.58-ti-arm64-r29. Upgraded all 64-bit Raspberry kernels to 6.12.36. Upgraded
 the .Net Runtime extension to 9.0.8 and the Python3 extension to 3.13.5.</li>
+<li>12 July 2025 -- Renamed <b><tt>/boot/packages</tt></b> to
+<b><tt>/boot/extensions</tt></b>.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the <b>MuntsOS</b> cross-toolchain development
@@ -163,29 +165,26 @@ tarball files (<b><tt>.tgz</tt></b>) in it will be extracted on top of the root
 file system. Typically you would use this mechanism for customized
 <b><tt>/etc/passwd</tt></b>, <b><tt>.ssh/authorized_keys</tt></b>, and similiar
 system configuration files.</p>
-<p>Secondly, if <b><tt>/boot/packages</tt></b> exists, any Debian package files
-(<b><tt>.deb</tt></b>) in it will be installed into the root file system. Note
-that packages from the <a href="https://www.debian.org">Debian</a> project will
-probably not work; they must be built specifically for <b>MuntsOS</b>. The
-startup script that installs <b><tt>.deb</tt></b> packages also installs
-<b><tt>.rpm</tt></b> and <b><tt>.nupkg</tt></b> packages.</p>
+<p>Secondly, if <b><tt>/boot/extensions</tt></b> exists, any Debian package
+files (<b><tt>.deb</tt></b>) in it will be installed into the root file system.
+Note that packages from the <a href="https://www.debian.org">Debian</a> project
+will probably not work; they must be built specifically for <b>MuntsOS</b>. The
+startup script that installs <b><tt>.deb</tt></b> packages from
+<b><tt>/boot/extensions</tt></b> also installs <b><tt>.nupkg</tt></b> and
+<b><tt>.rpm</tt></b> packages as well as self-contained executable extension
+programs (<i>e.g.</i> <b><tt>remoteio_server-aarch64</tt></b>).</p>
 <p>Thirdly, the system startup script <b><tt>/etc/rc</tt></b> can be configured
 via a kernel command line option to search for a subdirectory called
 <b><tt>autoexec.d</tt></b> in various places, such as SD card, USB flash drive,
 USB CD-ROM or NFS mount. If an <b><tt>autoexec.d</tt></b> subdirectory is
 found, each executable program or script in it will be executed when the system
 boots.</p>
-<p>Many recent extensions are just compiled Ada programs (<i>e.g.</i>
-<b><tt>remoteio_server</tt></b>). They just need to be copied to
-<b><tt>/boot/autoexec.d</tt></b> for execution at boot time. Some of these Ada
-extension programs will require one or more shared library extension packages
-such as <b><tt>libzmq</tt></b>.</p>
 <p>The idea is to build a <b>MuntsOS</b> kernel (which takes a long time) once
 and install it to the target platform. Then application specific software can
 be built after the fact and installed as tarball files in
-<b><tt>/boot/tarballs</tt></b>; Debian, RPM, and NuGet package files in
-<b><tt>/boot/packages</tt></b>; or executable programs and scripts in
-<b><tt>/boot/autoexec.d</tt></b>.</p>
+<b><tt>/boot/tarballs</tt></b>; Debian, RPM, and NuGet package files or
+executable extension programs in <b><tt>/boot/extensions</tt></b>; or
+executable programs and scripts in <b><tt>/boot/autoexec.d</tt></b>.</p>
 <p>Prebuilt <b>MuntsOS</b> ext6.6.58-ti-arm64-r29ension packages are available
 at:</p>
 <p><a href=
