--- a/README.html
+++ b/README.html
@@ -105,16 +105,36 @@ Studio <b><tt>Build -&gt; Pack</tt></b>)
 <b><tt>&lt;progname&gt;.&lt;progversion&gt;.nupkg</tt></b> is still
 supported.</p>
 </li>
-<li>10 July 2025 -- Following a June vacation hiatus, I upgraded library
+<li>
+<p>10 July 2025 -- Following a June vacation hiatus, I upgraded library
 components readline to 8.3, libgpiod to 2.2.2, libusb to 1.0.29, hidapi to
 0.15.0, openssl to 3.5.1, curl to 8.14.1, xmlrpc-c to 1.60.05,
 mariadb-connector-c <i>aka</i> libmysql to 3.4.5, nng to 1.11, libffi to 3.5.1,
 and xz to 5.8.1. Upgraded userland programs openssh to 10.0p1, ethtool to 6.15,
 mailutils to 3.19, and nano editor to 8.5. Upgraded the BeaglePlay kernel to
 6.6.58-ti-arm64-r29. Upgraded all 64-bit Raspberry kernels to 6.12.36. Upgraded
-the .Net Runtime extension to 9.0.8 and the Python3 extension to 3.13.5.</li>
-<li>12 July 2025 -- Renamed <b><tt>/boot/packages</tt></b> to
-<b><tt>/boot/extensions</tt></b>.</li>
+the .Net Runtime extension to 9.0.8 and the Python3 extension to 3.13.5.</p>
+</li>
+<li>
+<p>12 July 2025 -- In recent years I have written a lot of self-contained
+extension programs for <b>MuntsOS</b> using the Ada programming language
+(<i>e.g.</i> <b><tt>remoteio_server</tt></b>). Managing extension programs has
+always been a little awkward because they needed to be installed to
+<b><tt>/boot/autoexec.d</tt></b> instead of <b><tt>/boot/packages</tt></b> like
+other extensions. I have now renamed <b><tt>/boot/packages</tt></b> to
+<b><tt>/boot/extensions</tt></b>, to contain both extension package files (any
+of <b><tt>.deb</tt></b>, <b><tt>.nupkg</tt></b>, or <b><tt>.rpm</tt></b>) as
+well as extension program files (which must have the proper board architecture
+suffix <i>e.g.</i> <b><tt>remoteio_server-aarch64</tt></b>) and have modifed
+<b><tt>/etc/rc</tt></b> and <b><tt>sysconfig</tt></b> accordingly. You can
+still install executable programs and scripts to
+<b><tt>/boot/autoexec.d</tt></b> but <b><tt>sysconfig</tt></b> will no longer
+attempt to manage them. Note that executable programs and scripts installed to
+either <b><tt>/boot/autoexec.d</tt></b> or <b><tt>/boot/extensions</tt></b>
+must run to completion quickly or detach themselves to run as background
+processes, to avoid blocking the <b>MuntsOS</b> startup script
+<b><tt>/etc/rc</tt></b>.</p>
+</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the <b>MuntsOS</b> cross-toolchain development
