--- a/README.html
+++ b/README.html
@@ -169,6 +169,38 @@ Started adding C# components and test programs using <a href=
 and <a href=
 "https://www.nuget.org/packages/System.Device.Gpio">System.Device.Gpio</a>.</p>
 </li>
+<li>
+<p>10 August 2025 -- I was playing around this morning with .Net programs using
+<b><tt>System.Device.Gpio</tt></b> and stumbled across an odd failure: My first
+test program <a href=
+"https://github.com/pmunts/muntsos/tree/master/examples/csharp/programs/dotnet-iot/test_led">
+test_led</a> runs fine on a Raspberry Pi 3 but fails on a Raspberry Pi 5 with
+the following exception:</p>
+<pre>
+Unhandled exception. System.DllNotFoundException: Unable to load shared library 'libgpiod.so.2' or one of its dependencies.</pre>
+<p>A little searching led me to <a href=
+"https://github.com/dotnet/iot/blob/main/src/System.Device.Gpio/System/Device/Gpio/Drivers/RaspberryPi3Driver.cs">
+RaspberryPi3Driver.cs</a>. This <b><a href="https://github.com/dotnet/iot">.Net
+IoT Libraries</a></b> source file contain GPIO services for 64-bit Raspberry Pi
+Models, <i>but</i> it is missing platform detection code for the Raspberry Pi
+5. After failing to detect the Raspberry Pi 5, the code somewhere inside
+<b><tt>System.Device.Gpio</tt></b> fell back to <a href=
+"https://git.kernel.org/pub/scm/libs/libgpiod/libgpiod.git">libgpiod</a> V1,
+which subsequently failed because <b><tt>libgpiod.so.2</tt></b> was missing.
+This is a bit of a cautionary tale: The <b>.Net IoT Libraries</b> contain a lot
+of wonderful code, but it may not be well maintained. The Raspberry Pi 5 was
+released almost two years ago.</p>
+<p>I have added a new extension package
+<b><tt>libgpiod1-muntsos-aarch64.deb</tt></b> and for sanity's sake I have
+renamed the previous extension package
+<b><tt>libgpiod-muntsos-aarch64.deb</tt></b> to
+<b><tt>libgpiod2-muntsos-aarch64.deb</tt></b>. Confusingly,
+<b><tt>libgpiod1</tt></b> provides <b><tt>libgpiod.so.2</tt></b> and
+<b><tt>libgpiod2</tt></b> provides <b><tt>libgpiod.so.3</tt></b>.</p>
+I have also added <a href=
+"https://repo.munts.com/muntsos/doc/AppNote23-Setup-Debian.pdf">Application
+Note #23</a>, which contains a complete example using
+<b><tt>System.Device.Gpio</tt></b> on a <b>MuntsOS</b> target computer.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the <b>MuntsOS</b> cross-toolchain development
