Fixed URL for App Note #23
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23580 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -198,8 +198,8 @@ renamed the previous extension package
 <b><tt>libgpiod1</tt></b> provides <b><tt>libgpiod.so.2</tt></b> and
 <b><tt>libgpiod2</tt></b> provides <b><tt>libgpiod.so.3</tt></b>.</p>
 I have also added <a href=
-"https://repo.munts.com/muntsos/doc/AppNote23-Setup-Debian.pdf">Application
-Note #23</a>, which contains a complete example using
+"https://repo.munts.com/muntsos/doc/AppNote23-Flash-LED-C%23-.Net-IoT.pdf">
+Application Note #23</a>, which contains a complete example using
 <b><tt>System.Device.Gpio</tt></b> on a <b>MuntsOS</b> target computer.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
