Incorporated gprbuild into each cross-toolchain package
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23614 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -225,6 +225,11 @@ project files <b><tt>aarch64-muntsos-linux-gnu.cgpr</tt></b> and
 <b><tt>crosstool.mk</tt></b> to keep compile and link flags consistent between
 building with <b><tt>gnatmake</tt></b> and <b><tt>gprbuild</tt></b>.</p>
 </li>
+<li>
+<p>17 August 2025 -- Fussing around with <b><tt>gprbuild</tt></b> has driven me
+to incorporate a known working version of it into each of the cross-toolchain
+packages. The OS native <b><tt>gprbuild</tt></b> is no longer necessary.</p>
+</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the <b>MuntsOS</b> cross-toolchain development
